# zero-cache-rust

./: .dockerignore  .gitignore  AGENTS.md  BUGREPORT-whereexists-child-sync.md  CLAUDE.md  Cargo.toml  Dockerfile  PORTING.md  README.md  docker-compose.yml  plan_to_fix.md
bench/loadtest/: Cargo.toml  README.md
bench/loadtest/src/: lib.rs  main.rs
conformance/: Cargo.toml  README.md  docker-compose.conformance.yml  mutation-id-contract.md
conformance/src/: lib.rs  main.rs
conformance/tests/: differential.rs
crates/zero-cache-auth/: Cargo.toml
crates/zero-cache-auth/src/: compiled_permissions.rs  lib.rs  policy.rs  read_authorizer.rs  write_authorizer.rs
crates/zero-cache-change-source/: Cargo.toml
crates/zero-cache-change-source/src/: control.rs  data.rs  ddl.rs  downstream.rs  lib.rs  pg_connection.rs  pg_schema_diff.rs  pg_tls.rs  pg_to_change.rs  pgoutput.rs  published_schema.rs  replication_conn.rs  report_schema.rs  shard_schema.rs  status.rs  upstream.rs
crates/zero-cache-mutagen/: Cargo.toml
crates/zero-cache-mutagen/src/: api_fetch.rs  api_request.rs  apply_mutation.rs  crud_ops.rs  crud_ops_json.rs  last_mutation_id.rs  lib.rs  orchestration.rs  pusher_batch.rs  pusher_response.rs  pusher_service.rs  sliding_window_limiter.rs  sql.rs
crates/zero-cache-protocol/: Cargo.toml
crates/zero-cache-protocol/src/: analyze_query_result.rs  application_error.rs  ast.rs  ast_json.rs  change_desired_queries.rs  client_schema.rs  close_connection.rs  complete_ordering.rs  connect.rs  custom_queries.rs  delete_clients.rs  error.rs  error_kind.rs  error_origin.rs  error_reason.rs  inspect_down.rs  inspect_down_json.rs  inspect_up.rs  lib.rs  mutation_id.rs  mutation_result.rs  mutations_patch.rs  name_mapper.rs  ping.rs  poke.rs  poke_json.rs  pong.rs  protocol_version.rs  pull.rs  pull_json.rs  push.rs  push_json.rs  queries_patch.rs  query_hash.rs  query_server.rs  query_server_json.rs  row_patch.rs  up.rs  up_json.rs  update_auth.rs  (+1 more)
crates/zero-cache-server/: Cargo.toml
crates/zero-cache-server/src/: analyze_query.rs  auth_token.rs  bootstrap.rs  change_streamer_discovery.rs  change_streamer_server.rs  change_streamer_wire.rs  client_handler.rs  commit_dispatch.rs  config.rs  covering_shadow.rs  custom_mutation.rs  cvr_pool.rs  cvr_provision.rs  cvr_purger.rs  cvr_row_flush_barrier.rs  group_processor.rs  group_transition.rs  http_dispatch.rs  inspect_handler.rs  inspector_delegate.rs  lag_reporter.rs  lazy_start.rs  lib.rs  litestream.rs  live_connection.rs  live_hydration.rs  logging.rs  main.rs  metrics_server.rs  mutation_rate_limit.rs  otlp_exporter.rs  public_http.rs  query_engine_options.rs  query_pipeline.rs  replicator_service.rs  serve_connection.rs  service_lifecycle.rs  shadow_sync_canary.rs  sync_server.rs  sync_service.rs  (+6 more)
crates/zero-cache-server/tests/: client_handler_live_poke.rs  e2e_pipeline_to_websocket.rs  feature_e2e.rs  group_multiconn_e2e.rs  hunting_game_hard_e2e.rs  hydration_timing.rs  reference_conformance.rs
crates/zero-cache-services/: Cargo.toml
crates/zero-cache-services/src/: broadcast.rs  change_streamer_error.rs  change_streamer_forwarder.rs  change_streamer_storer.rs  lib.rs  metrics.rs  notifier.rs  sliding_window_limiter.rs  subscriber_backpressure.rs
crates/zero-cache-shared/: Cargo.toml
crates/zero-cache-shared/src/: arrays.rs  bigint_json.rs  binary_search.rs  centroid.rs  deep_merge.rs  error_details.rs  event_publish.rs  float_to_ordered_string.rs  hash.rs  lib.rs  logarithmic_histogram.rs  parse_big_int.rs  queue.rs  ref_count.rs  tdigest.rs  timed_cache.rs
crates/zero-cache-sqlite/: Cargo.toml
crates/zero-cache-sqlite/src/: change_dispatcher.rs  change_fanout.rs  change_log.rs  change_stream_loop.rs  change_streamer_service.rs  column_metadata.rs  create.rs  database_storage.rs  db_maintenance.rs  ddl_apply.rs  explain_queries.rs  initial_sync.rs  initial_sync_copy.rs  initial_sync_metrics.rs  ivm_bridge.rs  lib.rs  lite_tables.rs  migration.rs  pg_copy_text.rs  pipeline.rs  publication_validation.rs  query_builder.rs  replication_apply.rs  replication_state.rs  replication_supervisor.rs  replicator_setup.rs  resolve_scalar_subqueries.rs  row_apply.rs  runtime_events.rs  scanstatus.rs  shadow_sync.rs  snapshotter.rs  sql_inline.rs  sqlite_cost_model.rs  sqlite_source.rs  sqlite_stat_fanout.rs  sqlite_table_source.rs  statement_cache.rs  streamed_apply.rs  subscriber_catchup.rs  (+2 more)
crates/zero-cache-types/: Cargo.toml
crates/zero-cache-types/benches/: lexi_version.rs
crates/zero-cache-types/src/: column_metadata.rs  error_with_level.rs  initial_sync_sql.rs  lexi_version.rs  lib.rs  lite.rs  lsn.rs  names.rs  pg.rs  pg_copy_binary.rs  pg_data_type.rs  pg_to_lite.rs  pg_types.rs  published_schema_json.rs  row_key.rs  shards.rs  specs.rs  sql.rs  state_version.rs  strings.rs  subscription.rs  timeout.rs  url_params.rs  warmup.rs
crates/zero-cache-view-syncer/: Cargo.toml
crates/zero-cache-view-syncer/src/: client_handler_poke.rs  client_handler_row_patch.rs  client_patch.rs  connection_context_manager.rs  connection_dispatch.rs  cvr_client_state.rs  cvr_config_store.rs  cvr_delete_unreferenced_rows.rs  cvr_desired_queries.rs  cvr_eviction.rs  cvr_flush_sql.rs  cvr_inspect.rs  cvr_internal_queries.rs  cvr_load.rs  cvr_ownership.rs  cvr_query_driven_updater.rs  cvr_query_handler.rs  cvr_ref_counts.rs  cvr_row_cache_sql.rs  cvr_row_received.rs  cvr_schema_sql.rs  cvr_store_pg.rs  cvr_types.rs  cvr_updater.rs  cvr_version.rs  drain_coordinator.rs  graph_pipeline_driver.rs  group_cvr.rs  group_graph_pipeline.rs  group_pipeline.rs  group_query_set.rs  group_registry.rs  group_shared_pipeline.rs  hydration_stats.rs  lib.rs  pipeline_driver.rs  poke_builder.rs  query_covering.rs  query_hydration.rs  query_invalidation.rs  (+9 more)
crates/zero-cache-workers/: Cargo.toml
crates/zero-cache-workers/src/: connect_params.rs  connection.rs  lib.rs  mutator.rs  replicator_ipc.rs  serving_lag.rs  syncer_ws_message_handler.rs  url_params.rs  websocket_server_options.rs  worker_message.rs
crates/zero-cache-zql/: Cargo.toml
(+52 files in other folders)
