[package]
name = "zero-cache-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebSocket sync transport for zero-cache (port of src/server + src/workers/syncer.ts), incremental."

[dependencies]
zero-cache-protocol = { path = "../zero-cache-protocol" }
zero-cache-types = { path = "../zero-cache-types" }
zero-cache-shared = { path = "../zero-cache-shared" }
zero-cache-view-syncer = { path = "../zero-cache-view-syncer" }
zero-cache-sqlite = { path = "../zero-cache-sqlite" }
zero-cache-zql = { path = "../zero-cache-zql" }
zero-cache-mutagen = { path = "../zero-cache-mutagen" }
zero-cache-change-source = { path = "../zero-cache-change-source" }
zero-cache-auth = { path = "../zero-cache-auth" }
zero-cache-services = { path = "../zero-cache-services" }
zero-cache-workers = { path = "../zero-cache-workers" }
tokio-postgres.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "signal"] }
tokio-tungstenite = "0.28"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
thiserror.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64.workspace = true
jsonwebtoken = "9"
serde_json = "1"
flate2 = "1"
if-addrs = "0.13"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
rusqlite = { version = "0.32" }
hmac = "0.12"
sha2 = "0.10"
