[package]
name = "zero-cache-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zero v1.7 SQLite and snapshot/IVM storage layer."

[dependencies]
zero-cache-types = { path = "../zero-cache-types" }
zero-cache-shared = { path = "../zero-cache-shared" }
zero-cache-change-source = { path = "../zero-cache-change-source" }
zero-cache-zql = { path = "../zero-cache-zql" }
zero-cache-protocol = { path = "../zero-cache-protocol" }
rusqlite = { version = "0.32", features = ["functions"] }
libsqlite3-sys = { version = "0.30.1", features = ["zero-sqlite3"] }
thiserror.workspace = true
num-bigint.workspace = true
tokio-postgres.workspace = true
tokio = { version = "1", features = ["sync"] }
futures-util = "0.3"

[features]
# The pinned Zero SQLite engine always exposes sqlite3_stmt_scanstatus_v2; this
# feature controls only the Rust wrapper module.
default = ["scanstatus"]
scanstatus = []

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
