[package]
name = "zero-cache-view-syncer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zero v1.7 client-group view-syncer and persistent IVM pipelines."

[dependencies]
zero-cache-types = { path = "../zero-cache-types" }
zero-cache-shared = { path = "../zero-cache-shared" }
zero-cache-protocol = { path = "../zero-cache-protocol" }
zero-cache-zql = { path = "../zero-cache-zql" }
zero-cache-sqlite = { path = "../zero-cache-sqlite" }
zero-cache-mutagen = { path = "../zero-cache-mutagen" }
thiserror.workspace = true
num-bigint.workspace = true
tokio-postgres.workspace = true
tokio = { version = "1", features = ["macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"

[dev-dependencies]
zero-cache-change-source = { path = "../zero-cache-change-source" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
